# rgb-2025

./: .gitignore  Cargo.toml  README.md  conf-lin-router.sh  flake.nix  generate_pride_flags.nu  justfile  rgb-2025-wrapper-pi2.sh  rgb-2025-wrapper.sh  rust-toolchain.toml
.cargo/: config.toml
nt-stub-cli/: Cargo.toml
nt-stub-cli/src/: main.rs  position_sim.rs
src/: main.rs  network_tables.rs  renderer.rs  shaders.rs  spi.rs  strips.rs
src/drivers/: mod.rs  spi.rs
src/drivers/dma_pwm/: mailbox.rs  mod.rs
src/shaders/: atoms.rs  field_relative.rs  mod.rs  pride.rs  utils.rs
