[package]
name = "rgb-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
palette = "0.7.6"
smart-leds = "0.4.0"
shark = { git = "https://github.com/frc3636/shark", version = "0.1.0" }

embedded-hal = "1.0.0"
nb = "0.1.3"

ws2812-spi = { version = "0.5.0", features = ["std"] }
rpi_embedded = "0.1.0"
